<resources>
    <string name="app_name">OnboardTest</string>
    <string name="start">Начать</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="welcome_text">Платформа\nонбординга №1</string>
    <string name="already_have_account">Уже есть аккаунт?</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="password">Пароль</string>
    <string name="e_mail">E-mail</string>
    <string name="registration">Регистрация</string>
    <string name="sign_in">Войти</string>
    <string name="continue_text">Продолжить</string>
    <string name="no_account">Нет аккаунта?</string>
    <string name="sign_in_2">Вход</string>
    <string name="profile">Your Profile</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="complete_registration">Завершить регистрацию</string>
    <string name="password_recovery">Восстановление пароля</string>
    <string name="password_recovery_text">Для восстановления доступа на ваш\nEmail будет выслан код для\nподтверждения.</string>
    <string name="password_recovery_text2">Проверьте почту.\n\nВведите код для подверждения.</string>
    <string name="code">Код</string>
    <string name="wrong_code">Введенный код неверен.</string>
    <string name="new_password">Введите новый пароль.</string>
    <string name="chats">Чаты</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="fill_field">Заполните поле</string>
    <string name="send_again">Отправить снова</string>
    <string name="toast_error_text">Ошибка. Попробуйте позже.</string>
    <string name="email_error">Неверный email</string>
    <string name="password_error">Неверный пароль</string>
    <string name="invalid_email">Введите корректный email</string>
    <string name="email_already_exists">Такая почта уже существует</string>
    <string name="fill_all_fields">Заполните все поля</string>
    <string name="password_mismatch">Пароли не совпадают</string>
    <string name="email_does_not_exist">Такой почты не существует</string>
    <string name="invalid_code">Неверный код</string>
    <string name="courses">Курсы</string>
    <string name="profile2">Профиль</string>
    <string name="employee_email">E-mail сотрудника</string>
    <string name="add_employee">Добавление сотрудника</string>
    <string name="your_tasks">Ваши задачи</string>
    <string name="tasks">Задачи</string>
    <string name="too_many_notifications">9+</string>
    <string name="unfinished">Незавершенные</string>
    <string name="finished">Завершенные</string>
    <string name="statistic">Статистика</string>
    <string name="achievements">Достижения</string>
    <string name="activity">Активность</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="add_task">Добавление задачи</string>
    <string name="et_title">Заголовок</string>
    <string name="teams">Команды</string>
    <string name="about_me">О себе: </string>
    <string name="support">Поддержка</string>
    <string name="questions">Вопросы</string>
    <string name="deadline_date">Дата дедлайна</string>
    <string name="message">Текст обращениия</string>
    <string name="new_appeal">Новое обращение</string>
</resources>