<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.welcome.sign_in.SignInFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/gl_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/gl_start" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/gl_end" />

    <ImageView
        android:id="@+id/iv_mr_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/mr_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/tv_password_recovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_17x"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/password_recovery"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/iv_mr_logo" />

    <TextView
        android:id="@+id/tv_password_recovery_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_6x"
        android:fontFamily="@font/mulish_regular"
        android:text="@string/password_recovery_text2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tv_password_recovery" />

    <EditText
        android:id="@+id/et_code"
        android:layout_width="0dp"
        android:layout_height="@dimen/space_9x"
        android:layout_marginTop="@dimen/space_16x"
        android:autofillHints="phone"
        android:background="@drawable/input_field_background"
        android:fontFamily="@font/mulish_semibold"
        android:hint="@string/code"
        android:inputType="number"
        android:paddingHorizontal="@dimen/space_2x"
        android:textColor="@color/black"
        android:textColorHint="@color/neutral_disabled"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tv_password_recovery_text" />

    <TextView
        android:id="@+id/tv_wrong_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_2x"
        android:layout_marginTop="@dimen/space_1x"
        android:text="@string/wrong_code"
        android:textColor="#FF5454"
        android:textSize="10sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/et_code" />

    <TextView
        android:id="@+id/tv_repeating_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_6x"
        android:text="@string/send_again"
        android:textColor="@color/main_purple"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/et_code" />

    <TextView
        android:id="@+id/tv_continue_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_13.5x"
        android:background="@drawable/welcome_button_background"
        android:fontFamily="@font/mulish_semibold"
        android:paddingVertical="@dimen/space_4x"
        android:text="@string/continue_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start" />

    <include
        android:id="@+id/loading"
        layout="@layout/fragment_loading"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
