<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.welcome.sign_in.SignInFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/gl_top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/gl_start" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/gl_end" />

    <ImageView
        android:id="@+id/iv_mr_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/mr_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/mulish_bold"
        android:text="@string/sign_in_2"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/til_email"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_4x"
        android:background="@drawable/input_field_background"
        android:textColorHint="@color/neutral_disabled"
        app:boxStrokeWidth="0dp"
        app:endIconMode="clear_text"
        app:hintEnabled="false"
        app:layout_constraintBottom_toTopOf="@id/til_password"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:prefixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="0dp"
            android:paddingVertical="@dimen/space_3x"
            android:textColor="@color/black"
            android:textColorHint="@color/neutral_disabled"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_field_background"
        android:textColorHint="@color/neutral_disabled"
        app:boxStrokeWidth="0dp"
        app:endIconMode="password_toggle"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="@id/tv_continue_button"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/iv_mr_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:prefixTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#00000000"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="0dp"
            android:paddingVertical="@dimen/space_3x"
            android:textColor="@color/black"
            android:textColorHint="@color/neutral_disabled"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_3x"
        android:layout_marginEnd="@dimen/space_1.5x"
        android:text="@string/no_account"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@id/tv_sign_in"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_3x"
        android:text="@string/registration"
        android:textColor="@color/main_purple"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/gl_end"
        app:layout_constraintStart_toEndOf="@id/tv_already_have_account"
        app:layout_constraintTop_toBottomOf="@id/til_password" />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_3x"
        android:textColor="@color/neutral_disabled"
        android:text="@string/forgot_password"
        app:layout_constraintEnd_toEndOf="@+id/gl_end"
        app:layout_constraintStart_toEndOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tv_sign_in" />


    <TextView
        android:id="@+id/tv_continue_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:background="@drawable/welcome_button_background"
        android:fontFamily="@font/mulish_semibold"
        android:paddingVertical="16dp"
        android:text="@string/continue_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start" />

    <include
        android:id="@+id/login_loading"
        layout="@layout/fragment_loading"
        android:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>